Emoji_Language_jjt/src/CPCS302_Project_jjt/Emoji_Language.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Emoji_Language.java */
package CPCS302_Project_jjt;

public class Emoji_Language/*@bgen(jjtree)*/implements Emoji_LanguageTreeConstants, Emoji_LanguageConstants {/*@bgen(jjtree)*/
  protected static JJTEmoji_LanguageState jjtree = new JJTEmoji_LanguageState();public static void main(String args [])
  {

    System.out.println("\u005cn----- Weclome To Our Emoji Language :] ----- ");
    System.out.println("");
    System.out.print("Enter an expression: ");
    new Emoji_Language(System.in);
    try
    {
      SimpleNode n = Emoji_Language.Start();
      System.out.println("");
      n.dump(" >> ");
       System.out.println("\u005cncorrect statement.");
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("\u005cnOops, Incorrect statement.");
      System.out.println(e.getMessage());
    }
    catch(Error e)
        {
          System.out.println("\u005cnOops, Incorrect statement.");
          System.out.println(e.getMessage());
        }

  }

// ---------------------- GRAMMARS ------------------------- //
  static final public SimpleNode Start() throws ParseException {
 /*@bgen(jjtree) Start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      Stmts();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Stmts() throws ParseException {
 /*@bgen(jjtree) Stmts */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMTS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
      case CONSTANT:
        Decleration_Stmt();
        END_STATEMENT();
        break;
      case ARR:
        Array();
        break;
      case LIST:
        List();
        break;
      case REPEAT:
        Iterative_Stmt();
        break;
      case INCASE:
        Conditional_Stmt();
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Decleration_Stmt() throws ParseException {
 /*@bgen(jjtree) Decleration_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTDECLERATION_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONSTANT:
        Constant_Stmt();
        break;
      case ID:
        Assignment_Stmt();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void Constant_Stmt() throws ParseException {
 /*@bgen(jjtree) Constant_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTCONSTANT_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      CONSTANT();
      ID();
      ASSIGNMENT();
      Stmt();
                                        jjtree.closeNodeScope(jjtn000, true);
                                        jjtc000 = false;
                                        System.out.println("Found a Constant");
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Assignment_Stmt() throws ParseException {
 /*@bgen(jjtree) Assignment_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ID();
      ASSIGNMENT();
      Stmt();
                            jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
                            System.out.println("Found an Assignment Statement");
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void Stmt() throws ParseException {
 /*@bgen(jjtree) Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
      case IN:
      case FL:
        Operand();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case MULTIPLY:
        case DIVIDE:
        case REMAINDER:
        case POWER:
        case IS_EQUAL:
        case NOT_EQUAL:
        case GREATER_THAN:
        case GREATER_THAN_OR_EQUAL:
        case LESS_THAN:
        case LESS_THAN_OR_EQUAL:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PLUS:
          case MINUS:
          case MULTIPLY:
          case DIVIDE:
          case REMAINDER:
          case POWER:
            Arithmetic_Stmt();
            break;
          case IS_EQUAL:
          case NOT_EQUAL:
          case GREATER_THAN:
          case GREATER_THAN_OR_EQUAL:
          case LESS_THAN:
          case LESS_THAN_OR_EQUAL:
            Relational_Stmt();
            break;
          default:
            jj_la1[2] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        break;
      case BO:
        Boolean_Stmt();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Arithmetic_Stmt() throws ParseException {
 /*@bgen(jjtree) Arithmetic_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTARITHMETIC_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        Arithmetic_Operation();
        Operand();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case MULTIPLY:
        case DIVIDE:
        case REMAINDER:
        case POWER:
          ;
          break;
        default:
          jj_la1[5] = jj_gen;
          break label_1;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Relational_Stmt() throws ParseException {
 /*@bgen(jjtree) Relational_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTRELATIONAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        Relational_Operation();
        Operand();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IS_EQUAL:
        case NOT_EQUAL:
        case GREATER_THAN:
        case GREATER_THAN_OR_EQUAL:
        case LESS_THAN:
        case LESS_THAN_OR_EQUAL:
          ;
          break;
        default:
          jj_la1[6] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Boolean_Stmt() throws ParseException {
 /*@bgen(jjtree) Boolean_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLEAN_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      BO();
      label_3:
      while (true) {
        Logical_Operators();
        BO();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
        case OR:
        case NOT:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
      }
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void Arithmetic_Operation() throws ParseException {
 /*@bgen(jjtree) Arithmetic_Operation */
  SimpleNode jjtn000 = new SimpleNode(JJTARITHMETIC_OPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        PLUS();
        break;
      case MINUS:
        MINUS();
        break;
      case MULTIPLY:
        MULTIPLY();
        break;
      case DIVIDE:
        DIVIDE();
        break;
      case REMAINDER:
        REMAINDER();
        break;
      case POWER:
        POWER();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void Relational_Operation() throws ParseException {
 /*@bgen(jjtree) Relational_Operation */
  SimpleNode jjtn000 = new SimpleNode(JJTRELATIONAL_OPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IS_EQUAL:
        IS_EQUAL();
        break;
      case NOT_EQUAL:
        NOT_EQUAL();
        break;
      case GREATER_THAN:
        GREATER_THAN();
        break;
      case GREATER_THAN_OR_EQUAL:
        GREATER_THAN_OR_EQUAL();
        break;
      case LESS_THAN:
        LESS_THAN();
        break;
      case LESS_THAN_OR_EQUAL:
        LESS_THAN_OR_EQUAL();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Logical_Operators() throws ParseException {
 /*@bgen(jjtree) Logical_Operators */
  SimpleNode jjtn000 = new SimpleNode(JJTLOGICAL_OPERATORS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        AND();
        break;
      case OR:
        OR();
        break;
      case NOT:
        NOT();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Array() throws ParseException {
 /*@bgen(jjtree) Array */
  SimpleNode jjtn000 = new SimpleNode(JJTARRAY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ARR();
      ID();
      OPEN_ANGLE_BRACKET();
      CLOSE_ANGLE_BRACKET();
      ASSIGNMENT();
      OPEN_SQUARE_BRACKET();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
      case FL:
        Number();
        break;
      case LETTER:
      case SYMBOL:
        String();
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BAR:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_4;
        }
        BAR();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IN:
        case FL:
          Number();
          break;
        case LETTER:
        case SYMBOL:
          String();
          break;
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      CLOSE_SQUARE_BRACKET();
      END_STATEMENT();
                                          jjtree.closeNodeScope(jjtn000, true);
                                          jjtc000 = false;
                                          System.out.println("Found an Array");
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void List() throws ParseException {
 /*@bgen(jjtree) List */
  SimpleNode jjtn000 = new SimpleNode(JJTLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);int count = 0; Token listSize;
    try {
      LIST();
      ID();
      OPEN_ANGLE_BRACKET();
      listSize = IN();
      CLOSE_ANGLE_BRACKET();
      ASSIGNMENT();
      OPEN_SQUARE_BRACKET();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IN:
      case FL:
        Number();
        break;
      case LETTER:
      case SYMBOL:
        String();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
                            count++;
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case BAR:
          ;
          break;
        default:
          jj_la1[15] = jj_gen;
          break label_5;
        }
        BAR();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IN:
        case FL:
          Number();
          break;
        case LETTER:
        case SYMBOL:
          String();
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                         count++;
      }
      CLOSE_SQUARE_BRACKET();
      END_STATEMENT();
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    if (count != Integer.parseInt(listSize.image)) {if (true) throw new ParseException("The list must be of the specified size!");}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Iterative_Stmt() throws ParseException {
 /*@bgen(jjtree) Iterative_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTITERATIVE_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      REPEAT();
      Condition();
      OPEN_ROUND_BRACKET();
      label_6:
      while (true) {
        Stmts();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
        case CONSTANT:
        case INCASE:
        case REPEAT:
        case ARR:
        case LIST:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_6;
        }
      }
      CLOSE_ROUND_BRACKET();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Conditional_Stmt() throws ParseException {
 /*@bgen(jjtree) Conditional_Stmt */
  SimpleNode jjtn000 = new SimpleNode(JJTCONDITIONAL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      INCASE();
      Condition();
      SO();
      OPEN_ROUND_BRACKET();
      label_7:
      while (true) {
        Stmts();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ID:
        case CONSTANT:
        case INCASE:
        case REPEAT:
        case ARR:
        case LIST:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_7;
        }
      }
      CLOSE_ROUND_BRACKET();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        Else_Stmt();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      END();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
